Create HTML file with 6 parts. Create corresponding CSS for styling.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css"/>
+    <title>Shelby</title>
+</head>
+<body>
+    <!--header-->
+    <div class="cat-tree">
+        <div class="header">
+            <img class="logo" src="./img/shelby-profile.jpg"/>
+            <ul class="main">
+                <li><a href="#">About</a></li>  <!--add link-->
+                <li><a href="#">Merch</a></li> <!--add link-->
+                <li><a href="#">Contact</a></li> <!--add link-->
+            </ul>
+        </div>
+        <!--end of header-->
+        <!--opening-->
+        <div class="opening">
+                <div id="intro">
+                    <h1 class="vengeance">THE CAT-MAN</h1>
+                    <p class="night"><em>In the darkness of the night, when everyone is sleeping soundly, that is the perfect time to strike.</em></p>
+                </div>
+                <img class="catman" alt="I am cuteness incarnate." src="./img/cat-man.jpg"/>
 
+        </div>
+        <!--end of opening-->    
+    </div>
+    <!--gallery-->
+    <div class="information">
+            <h1>I AM THE DARK</h1>
+            <div class="gallery">
+                <div class="catpic">
+                    <img class="photo" src="./img/sleep1.jpg" alt="sleep"/>
+                    <p><strong>SLEEP</strong></p>
+                    <p>so that energy may condense into my body.</p>
+                </div>
+                <div class="catpic">
+                    <img class="photo" src="./img/train1.jpg" alt="train"/>
+                    <p><strong>TRAIN</strong></p>
+                    <p>my slave keeps me preoccupied.</p>
+                </div>
+                <div class="catpic">
+                    <img class="photo" src="./img/sleep2.jpg" alt="sleep some more"/>
+                    <p><strong>SLEEP MORE</strong></p>
+                    <p>because I have nothing else to do.</p>
+                </div>
+                <div class="catpic">
+                    <img class="photo" src="./img/train2.jpg" alt="train with mom"/>
+                    <p><strong>COMBAT</strong></p>
+                    <p>train with mom to learn new Dog-Fu skills.</p>
+                </div>
+                <div class="catpic">
+                    <img class="photo" src="./img/philosocat.jpg" alt="meditate"/>
+                    <p><strong>MEDITATE</strong></p>
+                    <p>hmmmm I love Temptation treats.</p>
+                </div>
+            </div>          
+    </div>
+    <!--end of gallery-->
+    <div class="morning">
+        <div class="quote">
+                <div class="saying">
+                    <h1><em>I will always wake you up at 5:30am. Or maybe even earlier.</em></h1>
+                    <h3>-Shelby</h3>
+                </div>         
+        </div>
+    </div>
+        <div class="information">
+            <div class="miss-me">
+                <p>If ever you need my feline goodness, just click the button!</p>
+                <button class="button">E-mail me!</button>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <p>The Odin Project 2022: <em>in loving memory of Shelby.</em></p>
+    
+</body>
+</html>
